Добавлена часть про head

--- a/index.html
+++ b/index.html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="author" content="Константин Филиппов" />
+    <meta
+    name="description"
+    content="Задача MDN — в том, чтобы обучить
+    новичков всему тому, что нужно им для разработки веб-сайтов и приложений." />
+    <!-- Лого ниже -->
+    <link rel="icon" type="image/svg+xml" href="./logo-mini.png">
+    <link rel="stylesheet" href="./index.css">
+    <script src="./test.js"></script>
+    <script src="./test.ts"></script>
 </head>
 <body>
-    <p> Ну так чисто чекнуть что точно все работает</p>
+    <h1>Изучение HTML</h1>
+    <h2>Что внутри &lt;head&gt;? Метаданные в HTML</h2>
+    <p>Элемент head HTML-документа не отображается на странице в веб-браузере. Он содержит такую информацию, как:
+
+заголовок (title) страницы
+ссылки на файлы CSS (если вы хотите применить к вашему HTML стили CSS)
+ссылки на иконки
+другие метаданные (данные о HTML: автор и важные ключевые слова, описывающие документ.)</p>
+    <h3>Что такое &lt;head&gt;</h3>
+    <p>Задача &lt;head&gt; — хранить метаданные документа. </p>
+    <h3>Название страницы (title)</h3>
+    <p>Нужен для того, чтобы добавить заголовок к странице (на этой страанице так же все сделано)</p>
+    <h3>Метаданные: Элемент &lt;meta&gt;</h3>
+    <p>В метаданных хранятся: кодировки (на 4 строке этого документа), автор страницы и контент (на 7 строке этого документа)</p>
+    <p>Описание из <code>&lt;meta name="description"&gt;</code> (на 9 строке этого документа) используется на страницах поисковой выдачи.</p>
+    <h3>Добавление иконок</h3>
+    <p>Добавление иконки показано на строке 13 этого документа</p>
+    <h3>Подключение CSS и JavaScript</h3>
+    <p>Современные сайты используют CSS, чтобы выглядеть привлекательнее, и добавляют интерактивные функции через JavaScript: видеоплееры, карты, игры. Обычно связанные стили добавляют на страницу через элемент &lt;link&gt;, а скрипты — через элемент &lt;script&gt;. (на 14-16 строках этого документа)</p>
+    <h2>Основы редактирования текста в HTML</h2>
 </body>
 </html>
