--- a/index.html
+++ b/index.html
@@ -36,5 +36,42 @@
     <h3>Подключение CSS и JavaScript</h3>
     <p>Современные сайты используют CSS, чтобы выглядеть привлекательнее, и добавляют интерактивные функции через JavaScript: видеоплееры, карты, игры. Обычно связанные стили добавляют на страницу через элемент &lt;link&gt;, а скрипты — через элемент &lt;script&gt;. (на 14-16 строках этого документа)</p>
     <h2>Основы редактирования текста в HTML</h2>
+    <h3>Списки: упорядочные (ol) и неупорядоченные (ul) и вложенный</h3>
+    <p>
+        <ul>
+            <li>Упорядоченный (на 43 строке этого документа):</li>
+                <ol>
+                    <li>Молоко</li>
+                    <li>Хлеб</li>
+                    <li>Соль</li>
+                    <li>Яйца</li>
+                </ol>
+            <li>Неупорядоченный (на 50 строке этого документа):</li>
+                <ul>
+                    <li>Молоко</li>
+                    <li>Хлеб</li>
+                    <li>Соль</li>
+                    <li>Яйца</li>
+                </ul>
+            <li>Вложенный список (неупорядоченный вложен в упорядоченный) (на 57 строке этого документа):</li>
+                <ol>
+                    <li>Очистите чеснок от кожуры и крупно нарежьте.</li>
+                    <li>Удалите стебель и семена у перца; крупно нарежьте перец.</li>
+                    <li>Добавьте все ингредиенты в пищевой комбайн.</li>
+                    <li>
+                        Измельчите все ингредиенты до состояния пасты.
+                        <ul>
+                        <li>Если вы хотите "грубый" хумус, измельчайте пару минут.</li>
+                        <li>Если вам нужен гладкий хумус, измельчайте дольше.</li>
+                        </ul>
+                    </li>
+                </ol>
+        </ul>
+    </p>
+    <h3>Курсив и жирный текст</h3>
+    <p>
+        Я <em>рад</em>, что ты не <em>опоздал</em>.
+        (на 72 строке этого документа)
+    </p>
 </body>
 </html>
