Семантические HTML-теги

--- a/index.html
+++ b/index.html
@@ -186,5 +186,9 @@
         </ul>
     </em></strong></p>
     <h2>3. Семантические HTML-теги (HTML5)</h2>
+    <nav>
+        <a href="./second.html">вторая страница</a>
+        <a href="./third.html">третья страница</a>
+    </nav>
 </body>
 </html>
